--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:443/javatechie
-spring.datasource.username=root
-spring.datasource.password=""
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url= jdbc:mysql://localhost:8080/sandbox
+spring.datasource.username=root1
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect= prg.hibernate.dialect.MySQL5Dialect
-server.port=9191
