--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:8080/sandbox
+spring.datasource.url= jdbc:mysql://192.168.64.4/sandbox
 spring.datasource.username=root1
 spring.datasource.password=root
 
