--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://192.168.64.4/sandbox
-spring.datasource.username=root1
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com/employeedb
+spring.datasource.username=postgres
+spring.datasource.password= debug
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgresPlusDialect
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect= prg.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
