--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com/employeedb
+spring.jpa.properties.hibernate.dialect = org,hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql = true
+spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com:5432/hypermap
 spring.datasource.username=postgres
-spring.datasource.password= debug
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgresPlusDialect
+spring.datasource.password=debug
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
+server.port=5432
