--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.properties.hibernate.dialect = org,hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql = true
 spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com:5432/hypermap
@@ -8,3 +8,5 @@ spring.datasource.password=debug
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
 server.port=5432
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
