--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql = true
-spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com:5432/hypermap
+spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com:5432/hypermap?stringtype=unspecified
 spring.datasource.username=postgres
 spring.datasource.password=debug
 
