Add PrimeNG styles
Signed-off-by: Jason Ball <jasonericball@gmail.com>

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -34,7 +34,11 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/arcgis-js-api/themes/light/main.css"
+              "node_modules/arcgis-js-api/themes/light/main.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           },
@@ -102,7 +106,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css"
             ],
             "scripts": []
           }
