--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
     "@types/arcgis-js-api": "^4.17.0",
+    "primeng": "^11.1.0-rc.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
