Add GeoJSON history route
Signed-off-by: Jason Ball <jasonericball@gmail.com>

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -73,6 +73,12 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.grundid.opendatalab</groupId>
+			<artifactId>geojson-jackson</artifactId>
+			<version>1.14</version>
+		</dependency>
+
 	</dependencies>
 
 	<packaging>war</packaging>
