--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "@ng-idle/keepalive": "^10.0.0-beta.1",
     "@types/arcgis-js-api": "^4.17.0",
     "angular2-moment": "^1.9.0",
+    "arcgis-js-api": "^4.17.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.1.0-rc.1",
