--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,8 @@
     "@types/arcgis-js-api": "^4.17.0",
     "angular2-moment": "^1.9.0",
     "arcgis-js-api": "^4.17.1",
+    "chart.js": "^2.9.4",
+    "moment": "^2.24.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.1.0-rc.1",
@@ -38,6 +40,7 @@
     "@angular/compiler-cli": "~10.1.4",
     "@angular/language-service": "~10.1.4",
     "@arcgis/webpack-plugin": "^4.17.4",
+    "@types/chart.js": "^2.9.31",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
