--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql = true
-spring.datasource.url=jdbc:postgresql://hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com:5432/hypermap?stringtype=unspecified
-spring.datasource.username=postgres
-spring.datasource.password=debug
+spring.jpa.show-sql = false
+spring.datasource.url=jdbc:postgresql://${HYPERMAP_DB_HOST:hypermap-data-store-dev.cd9snfgmfsth.us-east-1.rds.amazonaws.com}:${HYPERMAP_DB_PORT:5432}/${HYPERMAP_DB:hypermap}?stringtype=unspecified
+spring.datasource.username=${HYPERMAP_DB_USERNAME:postgres}
+spring.datasource.password=${HYPERMAP_DB_PASSWORD:debug}
 
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
-server.port=5431
+server.port=${HYPERMAP_SERVER_PORT:5431}
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+hypermap.security.authHeader = X-API-KEY
+hypermap.security.apiKey = ${HYPERMAP_SERVER_API_KEY:TEST}
+hypermap.purpleair.autoupdate=${HYPERMAP_SERVER_AUTOUPDATE:true}
