Add Dockerfile for admin-ui
Signed-off-by: Jason Ball <jason@jasonball.dev>

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,8 @@
+#
+# Hypermap Server Dockerfile
+# Jason Ball | Evan Scott | Naomi Steele | Christian Manu
+#
+
 FROM maven:3-openjdk-11 AS build
 WORKDIR /build
 
