--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@
 # Jason Ball | Evan Scott | Naomi Steele | Christian Manu
 #
 
+# NOTE: You may need to increase Docker's memory limit to build the map
+# DO NOT use the new "docker compose" command. Use "docker-compose" (with the hyphen)
+
 version: "3.0"
 services:
   # This service can be removed if another database service is used (e.g., AWS RDS)
@@ -23,23 +26,28 @@ services:
       - type: volume
         source: dbdata
         target: /var/lib/postgresql/data
-    # Uncomment this to allow external connections
-    ports:
-      - "5432:5432"
+    # Uncomment this to allow external connections:
+    # ports:
+    #   - "5432:5432"
 
   hypermap_server:
     build: ./server
     image: hypermap/server
     ports:
-      - "5431:5431"
       - "8081:8080"
     environment:
+      # Hypermap server options
       HYPERMAP_DB_HOST: hypermap_db
       HYPERMAP_DB_PORT: 5432
       HYPERMAP_DB: hypermap
+      # Should match the username in `hypermap_db`
       HYPERMAP_DB_USERNAME: postgres
+      # Should match the password in `hypermap_db`
       HYPERMAP_DB_PASSWORD: db_password
+      # admin-ui API key. This should be changed!
       HYPERMAP_SERVER_API_KEY: api_key
+      # Enables the PurpleAir update timer.
+      # Disable if updating manually or via AWS Lambda
       HYPERMAP_SERVER_AUTOUPDATE: "true"
     networks:
       - hypermap
@@ -53,6 +61,21 @@ services:
       - "8082:80"
     depends_on:
       - hypermap_server
+  
+  hypermap_admin_ui:
+    build:
+      context: ./admin-ui
+      args:
+        # Changing these options requires rebuilding the container
+        # Should match the API key in `hypermap_server`
+        - API_KEY=api_key
+        - SERVER_HOST=http://localhost:8081
+    image: hypermap/admin-ui
+    ports:
+      - "8083:80"
+    depends_on:
+      - hypermap_server
+
 
 volumes:
   dbdata:
