Add HTTP Basic auth to admin-ui
Signed-off-by: Jason Ball <jason@jasonball.dev>

--- a/admin-ui/Dockerfile
+++ b/admin-ui/Dockerfile
@@ -7,8 +7,10 @@ FROM node:alpine as build
 
 ARG API_KEY
 ARG SERVER_HOST
+ARG USERNAME
+ARG PASSWORD
 
-RUN apk add git openssh sed
+RUN apk add git openssh sed apache2-utils
 
 WORKDIR /admin-ui
 COPY package.json package-lock.json ./
@@ -21,5 +23,8 @@ RUN sed -i "s|<%SERVER_HOST%>|$SERVER_HOST|g" src/environments/environment.docke
 RUN sed -i "s|<%API_KEY%>|$API_KEY|g" src/environments/environment.docker.ts
 RUN node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build --configuration=docker
 
+RUN htpasswd -bc ./htpasswd $USERNAME $PASSWORD
+
 FROM nginx:alpine
 COPY --from=build /admin-ui/dist/admin-ui /usr/share/nginx/html/
+COPY --from=build /admin-ui/htpasswd /
