--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,13 +72,20 @@ services:
       args:
         # Changing these options requires rebuilding the container
         # Should match the API key in `hypermap_server`
-        - API_KEY=api_key
-        - SERVER_HOST=http://localhost:8081
+        API_KEY: api_key
+        SERVER_HOST: http://localhost:8081
+        # These should be changed
+        USERNAME: admin
+        PASSWORD: Password123
     image: hypermap/admin-ui
     ports:
       - "8083:80"
     depends_on:
       - hypermap_server
+    volumes:
+      - type: bind
+        source: ./admin.conf
+        target: /etc/nginx/conf.d/default.conf
 
 
 volumes:
